--- a/src/components/outercomponent/outercss.css
+++ b/src/components/outercomponent/outercss.css
@@ -7,6 +7,11 @@
 }
 
 .outertasks {
+    margin-left: 20%;
+    margin-right: 20%;
+    width: 60%;
+    height: 500px;
+    overflow-y: scroll;
 }
 
 body {
@@ -38,4 +43,29 @@ input[type=submit] {
     min-height: 100vh;
     height: 100%;
     background-color:#9290C3;
+  }
+
+  .title-todo {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    font-size: x-large;
+    background-color:cadetblue;
+    width: 50%;
+    margin: auto;
+    color:cornsilk;
+  }
+
+  .search {
+    margin-bottom: 2%;
+  }
+
+  .search input {
+    padding: 8px;
+    width: 70%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 20%;
   }
