--- a/src/components/outercomponent/todo.css
+++ b/src/components/outercomponent/todo.css
@@ -1,15 +1,24 @@
 .todolight {
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 4px solid #e6e6e6;
   margin-bottom: 10px;
   border-radius: 5px;
 }
 
-.todo.completedlight {
+.todocompletedlight {
   background-color: #e6e6e6;
+  padding: 10px;
+  border: 4px solid #e6e6e6;
+  margin-bottom: 10px;
+  border-radius: 5px;
 }
 
 .todolight h1 {
+  margin: 0;
+  font-size: 16px;
+}
+
+.todocompletedlight h1 {
   margin: 0;
   font-size: 16px;
 }
@@ -24,15 +33,31 @@
   cursor: pointer;
 }
 
+.todocompletedlight button {
+  margin-left: 10px;
+  padding: 5px 10px;
+  background-color: #032f5d;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 .tododark {
   padding: 10px;
-  border: 1px solid #535C91;
+  font-size: 16px;
+  border: 4px solid #535C91;
   margin-bottom: 10px;
   border-radius: 5px;
 }
 
-.todo.completeddark {
+.todocompleteddark {
   background-color: #1B1A55;
+  padding: 10px;
+  font-size: 16px;
+  border: 4px solid #535C91;
+  margin-bottom: 10px;
+  border-radius: 5px;
 }
 
 .tododark h1 {
@@ -41,7 +66,23 @@
   color:#1B1A55;
 }
 
+.todocompleteddark h1 {
+  margin: 0;
+  font-size: 16px;
+  color:#fbfbfc;
+}
+
 .tododark button {
+  margin-left: 10px;
+  padding: 5px 10px;
+  background-color: #535C91;
+  color: #ccc;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.todocompleteddark button {
   margin-left: 10px;
   padding: 5px 10px;
   background-color: #535C91;
